<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_nuevo_usuario"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_nombre"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_apellidos"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="14dp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/contenedor_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_correo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/til_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:layout_marginTop="6dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:checked="true"
                    android:text="@string/hombre"/>

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/mujer"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/butt_registrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:clickable="true"
            android:background="@drawable/ripple"
            android:textColor="@android:color/white"
            android:elevation="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contenedor_sexo"
            app:layout_constraintRight_toLeftOf="@+id/butt_cancelar"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/butt_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:clickable="true"
            android:background="@drawable/ripple"
            android:textColor="@android:color/white"
            android:elevation="2dp"
            android:onClick="cancelar"
            app:layout_constraintLeft_toRightOf="@+id/butt_registrar"
            app:layout_constraintTop_toTopOf="@+id/butt_registrar"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp" />

    </android.support.constraint.ConstraintLayout>




</ScrollView>
